--- a/sk.html
+++ b/sk.html
@@ -2795,7 +2795,7 @@ LAST&rarr;		ZZLAST
 [Page header: "IES OPLW 003"]
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=62 doc_page=60 type=equalities]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=62 doc_page=60 type=equalities proof=1]
 [Page header: "IES OPLW 004"]
 
 ARCTAN=hJPQ CACT
@@ -2825,7 +2825,7 @@ CMNAME= 200020+10
 CPNAME= 200054
 CONSTK= 3
 CVTS= 6         **VARIABLE TO MOVE TO SATISFY THIS
-CONLET= 12      **CONSTRAINT LETTER DESIGNATOR
+CONLET= 12      **CONSTRAINT LETTER CODE
 CHVAR= 20       **# CHANGABLE VARIABLES
 COMP= 16        **CONSTRAINT COMPUTATION ROUTINE
 CURPICS= 15&times;SMASBL+LIST+1
@@ -2848,11 +2848,12 @@ FIX=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> 377720
 FIXSAP= 200064
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=63 doc_page=61 type=equalities]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=63 doc_page=61 type=equalities proof=1]
 [Page header: "IES OPLW 005"]
 
 FREEDOMS= 6&times;SMASBL+LIST+1
-FIXEDS= 12&times;SMASBL+LIST+1
+[Other FIXEDS defs use multiplier of 12]
+FIXEDS= 17&times;SMASBL+LIST+1
 
 GETIT= 7        **MASTER FORMATION SUBROUTINE
 
@@ -2892,7 +2893,7 @@ LMEND= 200024
 LMNAME= 200030
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=64 doc_page=62 type=equalities]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=64 doc_page=62 type=equalities proof=1]
 [Page header: "IES OPLW 006"]
 
 LMAG= 200020
@@ -2926,7 +2927,7 @@ OVERFLOWSTOP=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> 377731
 ONLINES= 12&times;MASBL+PICTURES
 
 PICTURES= 22&times;SMASBL+LIST+1
-PLS= 14 **LINES ND CIRCLES ON THIS POINT
+PLS= 14 **LINES ND CIRCLES ON THIS POINT [sic, ND]
 PVAL= 20        **COORDINATES OF POINT
 POINTS= 4&times;MASBL+PICTURES
 PSPL= 200042
@@ -2936,6 +2937,7 @@ PPART= 4        **PICTURE PARTS
 PINS= 14        **INSTANCES OF THIS PICTURE
 PICCHANGE=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> CPNAME
 PSNEED=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> 200041
+[PYTHAGORIAN label is defined in only one place in the code, in different program]
 PYTHAGORIAN= 200007
 PSEUDO= 200041
 PMAG= 200017
@@ -2947,7 +2949,7 @@ PLEND= 200133
 PUNCHIT=SKM <sub>4</sub><sub>.</sub><sub>7</sub> 377621
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=65 doc_page=63 type=equalities]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=65 doc_page=63 type=equalities proof=1]
 [Page header: "IES OPLW 007"]
 
 PLPUBUSY=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> 200132
@@ -2980,10 +2982,10 @@ S= 7
 SPECB= 2        **SPECIFIC BLOCKS
 SCALERS= 3&times;MASBL+PICTURES
 SPLAT=#-NLIST,,#-NLIST
-SVAL= 16        **VALUE OF THE SCALER
+SVAL= 16        **VALUE OF SCALER
 SSHOW= 14       **NUMBERS SHOWING THIS SCALER
 [377725 is defined as SHOWTOG below]
-SHOWBLKS=SKM <sub>4</sub><sub>.</sub><sub>9</sub> 377725	**SHOW NON-DRAW JUNK
+SHOWBLKS=SKM <sub>4</sub><sub>.</sub><sub>9</sub> 377725	**SHOW NON DRAW JUNK
 SHOWCON=SKM <sub>4</sub><sub>.</sub><sub>8</sub> 377725	**SHOW CONSTRAINTS
 SHOWPOINTS=SKM <sub>4</sub><sub>.</sub><sub>7</sub> 377725	**SHOW POINTS
 SHOWINSASBOX=SKM <sub>4</sub><sub>.</sub><sub>6</sub> 377725	**ENBOX INSTANCES
