Additional * vs @times@ fixes.

--- a/sk.html
+++ b/sk.html
@@ -42,7 +42,7 @@ DESIGNATED=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> PAGE1
 DEADS= 11&times;SMASBL+LIST+1
 DISPLAYK= 2
 DISPLAY = 5	**MASTER DISPLAY SUBROUTINE
-DESIGS= 13*SMASBL+LIST+1
+DESIGS= 13&times;SMASBL+LIST+1
 
 ERRORSTOP=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> 377730
 
@@ -123,7 +123,7 @@ NLIST= 23000	**MODEL EMPTY LIST STRUCTURE
 NTOSHO= 14	** SCALER TO BE SHOWN
 NVAL= 16		** R COS &alpha;, R SIN &alpha;, X, Y
 NCON= 17		**# CONSTRAINTS SHOWN
-NEWCONS= 16*SMASBL+LIST+1
+NEWCONS= 16&times;SMASBL+LIST+1
 NAME= 4		**NAME OF HEADER BLOCKS
 NEWCONTOG= 377725
 
@@ -274,7 +274,7 @@ DESIGNATED=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> PAGE1
 DEADS= 11&times;SMASBL+LIST+1
 DISPLAYK= 2
 DISPLAY = 5     **MASTER DISPLAY SUBROUTINE
-DESIGS= 13*SMASBL+LIST+1
+DESIGS= 13&times;SMASBL+LIST+1
 
 ERRORSTOP=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> 377730
 
@@ -354,7 +354,7 @@ NLIST= 32000
 NTOSHO= 14      ** SCALER TO BE SHOWN
 NVAL= 16        ** R COS &alpha;, R SIN &alpha;, X, Y
 NCON= 17        **# CONSTRAINTS SHOWN
-NEWCONS= 16*SMASBL+LIST+1
+NEWCONS= 16&times;SMASBL+LIST+1
 NAME= 4         **NAME OF HEADER BLOCKS
 NEWCONTOG= 377725
 
@@ -2837,7 +2837,7 @@ DISPLAY= 5	**MASTER DISPLAY SUBROUTINE
 DEADS= 11&times;SMASBL+LIST+1
 DISPLAYK= 2
 DEGEN=hJMP DEGEN1
-DESIGS= 13*SMASBL+LIST+1
+DESIGS= 13&times;SMASBL+LIST+1
 
 [Previous defs of ERRORSTOP have 377730 as last arg]
 ERRORSTOP=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> 377731
@@ -2918,7 +2918,7 @@ NLIST= 22000
 NVAL= 16        ** R COS &alpha;, R SIN &alpha;, X, Y
 NTOSHO= 14      ** SCALER TO BE SHOWN
 NCON= 17        **# CONSTRAINTS SHOWN
-NEWCONS= 16*SMASBL+LIST+1
+NEWCONS= 16&times;SMASBL+LIST+1
 NAME= 4         **NAME OF HEADER BLOCKS
 
 ONCIRCLES= 13&times;MASBL+PICTURES
@@ -3763,7 +3763,7 @@ CONLET= 12      **CONSTRAINT LETTER DESIGNATOR
 
 DISPLAY = 5     **MASTER DISPLAY SUBROUTINE
 DEADS= 11&times;SMASBL+LIST+1
-DESIGS= 13*SMASBL+LIST+1
+DESIGS= 13&times;SMASBL+LIST+1
 
 [*ERRS= TX2ERR]
 [*EOTCHK=]
@@ -3853,7 +3853,7 @@ NLIST= 23000	**MODEL EMPTY LIST STRUCTURE
 NUMBERS= 10&times;MASBL+PICTURES
 NTOSHO= 14      ** SCALER TO BE SHOWN
 NVAL= 16        ** R COS &alpha;, R SIN &alpha;, X, Y
-NEWCONS= 16*SMASBL+LIST+1
+NEWCONS= 16&times;SMASBL+LIST+1
 NAME= 4
 [*NEWH1=]
 [*NEWH2=]
