--- a/sk2.html
+++ b/sk2.html
@@ -366,7 +366,7 @@ DISPLAY= 5      **MASTER DISPLAY SUBROUTINE
 DEADS= 11&times;SMASBL+LIST+1
 DISPLAYK= 2	[line damaged, guessing that it's DISPLAYK based on previous equalities table]
 DEGEN=hJMP DEGEN1
-DESIGS= 13*SMASBL+LIST+1
+DESIGS= 13&times;SMASBL+LIST+1
 
 ERRORSTOP=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> 377731 [line damaged, guessing ERRORSTOP]
 EXPINS=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> EXPAIRTS      **EXPANDING INSTANCE
@@ -444,7 +444,7 @@ NLIST= 22000
 NVAL= 16        ** R COS &alpha;, R SIN &alpha;, X, Y
 NTOSHO= 14      ** SCALER TO BE SHOWN
 NCON= 17        **# CONSTRAINTS SHOWN
-NEWCONS= 16*SMASBL+LIST+1
+NEWCONS= 16&times;SMASBL+LIST+1
 NAME= 4         **NAME OF HEADER BLOCKS
 ONCIRCLES= 13&times;MASBL+PICTURES
 ORIGIN= 204400
@@ -2265,7 +2265,7 @@ CURPICS= 15&times;SMASBL+LIST+1
 CONSTRAINTS= 4&times;SMASBL+LIST+1
 CCFR= LIST-2
 
-DESIGS= 13*SMASBL+LIST+1
+DESIGS= 13&times;SMASBL+LIST+1
 
 ERRORSTOP=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> 377730
 
@@ -2315,7 +2315,7 @@ MOVINGS= 14&times;SMASBL+LIST+1
 
 NCON= 17        **# CONSTRAINTS SHOWN
 NAME= 4		**NAME OF HEADER BLOCKS
-NEWCONS= 16*SMASBL+LIST+1
+NEWCONS= 16&times;SMASBL+LIST+1
 [*NORT4=]
 [*NORT1=]
 [*NORT2=]
@@ -3507,7 +3507,7 @@ CONLET= 12      **CONSTRAINT LETTER CODE
 DISPLAY FILE= 100000
 DEADS= 11&times;SMASBL+LIST+1
 DISPLAY= 5      **MASTER DISPLAY SUBROUTINE
-DESIGS= 13*SMASBL+LIST+1
+DESIGS= 13&times;SMASBL+LIST+1
 
 ERRORSTOP=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> 377730
 
@@ -3579,7 +3579,7 @@ NCON= 17        **# CONSTRAINTS SHOWN
 NTOSHO= 14      ** SCALER TO BE SHOWN
 NVAL= 16        ** R COS &alpha;, R SIN &alpha;, X, Y
 NLIST= 23000    **MODEL EMPTY LIST STRUCTURE
-NEWCONS= 16*SMASBL+LIST+1
+NEWCONS= 16&times;SMASBL+LIST+1
 NAME= 4         **NAME OF HEADER BLOCKS
 
 ORIGIN= 1000
